graphql/hasura/hasura-k8s-stack/k8s/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura
spec:
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      labels:
        app: hasura
    spec:
      containers:
        - name: hasura
          image: hasura/graphql-engine:v1.0.0-beta.6
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "50m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hasura
spec:
  selector:
    app: hasura
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
